*** 19990909_2 by lusky
corrected error in ChangeLog


*** 19990909_1 by lusky
revved patchlevel to b106
fix return values for client_dopacket and dopacket (th)
m_links check for local client instead of connect


*** 19990908_2 by lusky
revved patchlevel to b105
cleanup m_userhost fix


*** 19990908_1 by lusky
changed 302 reply back to -5 form to fix userhost


*** 19990907_4 by lusky
more dbuf fixes (th)
check in send_message() that the descriptor is valid


*** 19990907_3 by lusky
changed killpath again.  I think I can live with this one.  (jl)


*** 19990907_2 by lusky
bumped patchlevel to b104
fixed a couple of stary index()'s
fix a cast in viconf
fixed broken tools/Makefile.in


*** 19990907_1 by lusky
disallow ':' in fix_key_old() too


*** 19990906_1 by lusky
compromise on supressed killpath and just not send to non opers at all rather than send two to real opers (jl)
more +k/-k fixes


*** 19990904_2 by lusky
more dbuf fixes (th)


*** 19990904_1 by lusky
major fixes to dbuf code (th)
bumped patchlevel to b103


*** 19990902_1 by lusky
added check for '#' in username and hostname of /quote kline


*** 19990831_1 by lusky
bumped patchlevel to b102
left over aconf->user gets freed twice, causing some malloc packages to leave their lunch all over the disk.... NULL things after every free (db)


*** 19990829_1 by lusky
fix for umode +O (jk)


*** 19990826_1 by lusky
turned on ANTI_DRONE_FLOOD by default
sync'd config.h.dist
include class.h in m_message.c
bumped patchlevel to b101


*** 19990825_2 by lusky
changed a strncpy to DupString in s_conf.c (db)


*** 19990825_1 by lusky
bumped patchlevel.h to b100
more kill path fixes (db)
m_oper fix for local oper flags (db)
ReadMessageFile stat fix (db)
cleanup of tools/Makefile.in (jl)


*** 19990819_1 by lusky
call release_client_dns_reply for servers too (th)
fixes for U and X lines (db)
Hide path on kill from "victim" (db)
Hide path on kill from oper to non opers (db)


*** 19990818_2 by khuon
Mental note: 
